kustomize/base/Deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app
        image: <ACCOUNT_ID>.dkr.ecr.us-east-1.amazonaws.com/project/my-app:a80b33af
        imagePullPolicy: IfNotPresent   # IfNotPresent # Pull the image only if it is not already available on the node
        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "500m" # 0.5 vCPU  # AWS recommends matching requests and limits on EKS Fargate
            memory: "512Mi" # 512 MiB = 0.5 GiB
          limits:
            cpu: "500m" # 0.5 vCPU
            memory: "512Mi" # 512 MiB = 0.5 GiB

        livenessProbe:   # Tells Kubernetes whether the (container) is still healthy/alive.
          httpGet:
            path: /health   # Health-check endpoint exposed by the app
            port: 5000      # port where the app is running
          initialDelaySeconds: 15  # Wait 15 seconds after the container starts before checking
          periodSeconds: 10  # Perform regular liveness check every 10 seconds

        readinessProbe:  # Tells Kubernetes whether the (Pod) is ready to receive traffic. If not, remove the Pod from ALB
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10

        startupProbe:  # Checks whether the (application)inside the container has successfully started.
                       # Once it succeeds, Kubernetes starts running the liveness and readiness probes.
          httpGet:
            path: /health
            port: 5000
          failureThreshold: 30  # startupProbe will wait max 5 mint (30 * 10 = 300s) for the app to start.
          periodSeconds: 10   # Perform startupProbe check every 10 seconds
