kustomize/base/ClusterIP-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
  labels:
    app: employees-app
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
    - name: app-service
      port: 80
      targetPort: 5000
