kustomize/base/ExternalName-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service-db
spec:
  type: ExternalName
  externalName: postgres-db.c638w6e889ek.us-east-1.rds.amazonaws.com
